tests/NormalTests/paczka1/small_fuzzy/30148070.err
Error in line 1: G01ddZYzr S351 64,2
Error in line 5: 6t2jGDilKJI S351 74,1
